Version 0.2.0+dev
- it is possible to define new menu types from neon

Version 0.2.0
- allowed setting menu's html id
- menu type's is now determined in template, see documentation
- changed thrown exceptions
- added support for custom menu types

Version 0.1.0
- first version